improved text size on different breakpoints

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -40,6 +40,7 @@
 	--color-text-secondary: #848484;
 	--font-sans: 'Switzer', 'Inter', sans-serif;
 	--header-height-mobile: 48px;
+	--header-height-tablet: 56px;
 	--header-height-desktop: 72px;
 }
 
