defined new color

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -37,6 +37,7 @@
 	--color-bg: #131313;
 	--color-text: #f8f7f4;
 	--color-accent: #ff4d00;
+	--color-accent-light: #ff773c;
 	--color-text-secondary: #848484;
 	--font-sans: 'Switzer', 'Inter', sans-serif;
 	--header-height-mobile: 48px;
